hu Mar  4 12:46:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

        * Source/NSClipView.m: Fixed to cope with nil document view.

Wed Mar  3 08:53:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSCell.m: ([-drawInteriorWithFrame:inView:]) don't draw
	background - NSCell shouldn't draw backgrounds even if opaque -
	it's the responsibility of the subclass.
	([-isOpaque]) Fixed to return NO as it should.
	* Source/NSTextFieldCell.m: ([-drawInteriorWithFrame:inView:])
	handle drawing background if necessary before calling method in super.

Tue Mar  2 13:27:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSView.m: Bugfix in redisplay - avoid views being redrawn
	when not needed - hope I didn't break anything - this stuff is tricky.

Tue Mar  2 11:40:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSMatrix.m: Tracking fixes by Benhur-de-Oliveira.Stein@imag.fr
	* Source/NSControl.m: Fix setting of cell states by Benhur
	* Source/NSCell.m: Toggle cell state in mouse tracking

Tue Mar  2 08:04:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Merge in 'dawn' CVS branch.

Mon Mar  1 20:06:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Removed PSMatrix - replaced by NSAffineTransform
	* Headers/AppKit/NSAffineTransform.h: New file based on PSMatrix.h
	* Source/NSAffineTransform.m: New file based on PSMatrix.m
	* Source/NSView.m: Modified to use NSAffineTransformAffineTransform
	* Source/GNUmakefile: Added NSAffineTransform
	* Source/NSCell.m: Don't include PSMatrix.h
	* Source/NSScroller.m: Don't include PSMatrix.h
	* Source/NSView.m: Use NSAffineTransform
	* Source/NSWindow.m: Don't include PSMatrix.h

Mon Mar  1 17:12:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Headers/AppKit/NSCell.h: Added MacOS-X cell state constants.

1999-03-01  Adam Fedor  <fedor@gnu.org>

	* Update documentation.
